# SoundCache

./: .gitignore  Dockerfile.relay  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
.claude/: launch.json
analysis/: cloud_vs_local_transcript_diff_2026-05-16.csv  cloud_vs_local_transcript_diff_qc_2026-05-16.csv  cloud_vs_local_transcript_diff_qc_report_2026-05-16.md  cloud_vs_local_transcript_diff_report_2026-05-16.md  cloud_vs_local_transcript_diff_summary_2026-05-16.json
api/: index.py
deploy/: fly.toml.example
docs/: background-fetch.md  cloud-demucs-benchmark-2026-05-15.md  cloud-source-separation-options-2026-05-15.md  cloud-transcription-recovery-2026-05-15.md  design-system-graphite-2026-05-25.md  design-system-gunmetal-2026-05-25.md  ios-shortcut-contract.md  ios-shortcut-v1-recipe.md  local-development.md  mac-launch-failure-audit-2026-05-13.md  mac-launcher-retry-2026-05-08.md  mac-launcher-retry-2026-05-08c.md  performance-architecture-audit-2026-05-16.md  qa-app-native-ingestion-2026-05-26.md  qa-hardening-2026-05-07.md  qa-response-build-2026-05-08d.md  qa-response-build-2026-05-15g.md  qa-response-build-2026-05-15h.md  qa-response-build-2026-05-15i.md  qa-response-build-2026-05-15j.md  qa-response-build-2026-05-15k.md  qa-response-build-2026-05-15l.md  qa-response-build-2026-05-16a.md  qa-response-build-2026-05-16b.md  qa-response-build-2026-05-17a.md  qa-response-build-2026-05-17b.md  qa-response-build-2026-05-17c.md  qa-response-build-2026-05-18a.md  qa-response-build-2026-05-18b.md  qa-response-build-2026-05-18c.md  qol-polish-progress-2026-05-08.md  redesign-brief-2026-05-07.md  redesign-progress-2026-05-07.md  redesign-qa-2026-05-07.md  relay-deployment.md  revision-brief-2026-05-08.md  revision-progress-2026-05-08.md  ui-art-direction-current.md  ui-mockups-skeuo-2026-05-25.html  v1-architecture.md
docs/plans/: app-native-ingestion-transcription-workers-2026-05-26.md
packaging/: README.md  RELEASE_NOTES_0.3.1.md  SoundCache.spec  entitlements.plist  entry.py  make_dmg.sh  sign_and_notarize.sh
scripts/: audit_associated_videos.py  audit_duplicates.py  backfill_artwork.py  backfill_associated_videos.py  backfill_usage_counts.py  build_ios_shortcut.py  bulk_ingest_monitor.py  capture_tiktok_audio.cjs  capture_usage_count.cjs  export_sound_pack.py  make-desktop-launcher.sh  make_app_background.py  make_readme_art.py  make_social_cards.py  profile_desktop_performance.py  sign_ios_shortcut.sh  tiktok_login.cjs  transcribe_audio.py  transcribe_cloud_recovery.py  update_mac_launcher.py
sketches/001-command-library/: README.md  index.html
src/sound_vault/: __init__.py  app.py  dependency_diagnostics.py  diagnostics.py  net.py  settings.py  update_check.py  url_safety.py
src/sound_vault/agent/: launchd.py
src/sound_vault/auth/: tiktok_session.py
src/sound_vault/db/: index_db.py
src/sound_vault/importers/: __init__.py  tiktok_archive.py
src/sound_vault/ingest/: cli.py  deeplink.py  download.py  factory.py  package.py  receipts.py  resolve.py  service.py  shortcut_builder.py  shortcut_inbox.py  tiktok_auth.py
src/sound_vault/relay/: client.py  inbox.py  leaderboard.py  pairing.py  (+2 more)
tests/: conftest.py  test_app_cli_import.py  test_app_native_workflow.py  test_asr_backend.py  test_associated_video_audit.py  test_associated_video_backfill.py  test_backcatalog_spine.py  test_dedupe_actions.py  test_dedupe_desktop_source.py  test_dedupe_review_workflow.py  test_deeplink.py  test_desktop_gui_workflows.py  test_desktop_menu_vault.py  test_desktop_ui_source.py  test_drag_export.py  test_duplicate_audit.py  test_export_sound_pack.py  test_finish_blockers.py  test_folder_portability.py  test_hashtags.py  test_import_progress_pipeline.py  test_inbox.py  test_index_cache_fidelity.py  test_index_db.py  test_index_upsert.py  test_ingest_download.py  test_ingest_enrichment.py  test_ingest_package.py  test_ingest_receipts.py  test_ingest_reconcile.py  test_ingest_resolve.py  test_ingest_service.py  test_ingest_worker.py  test_launchd_agent.py  test_leaderboard.py  test_library_collections.py  test_library_view_model.py  test_library_view_model_inbox.py  test_mac_launcher_packaging.py  test_media_auth_workers.py  (+36 more)
web/: README.md  index.html
web/packs/: starter-pack.json
web/shortcut/: README.md  SoundCache.unsigned.plist  SoundVault.unsigned.plist
(+21 files in other folders)
