[project]
name = "sound-vault-desktop"
version = "0.3.0"
description = "Local-first TikTok Sound Vault desktop app and pairing-code relay."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.0",
  "watchdog>=4.0",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
]
asr = [
  "faster-whisper>=1.1.0",
]
relay = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
]
dev = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "PySide6>=6.7",
  "faster-whisper>=1.1.0",
  "pytest>=8.2",
  "ruff>=0.6",
  "uvicorn>=0.30",
]

[project.scripts]
sound-vault = "sound_vault.app:main"
sound-vault-relay = "sound_vault.relay.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sound_vault"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
