[project]
name = "sound-vault-desktop"
version = "0.3.0"
description = "Local-first Sound Cache desktop app and pairing-code relay."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Leland Dutcher", email = "leland@lelanddutcher.com" }]
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.0",
  "watchdog>=4.0",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
  "qrcode>=7.4",
  # macOS: lets us set the app menu name to "Sound Cache" instead of "Python"
  # (the launcher runs a loose venv python not associated with the .app bundle).
  "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
  # On-device transcription is a core desktop feature, so ship its engines in the
  # default GUI install: faster-whisper (CPU everywhere / CUDA on NVIDIA) + MLX for
  # the Apple-Silicon GPU. Without these a fresh install has no ASR backend.
  "faster-whisper>=1.1.0",
  "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
asr = [
  "faster-whisper>=1.1.0",
]
asr-gpu = [
  # Apple-Silicon GPU acceleration via Apple's MLX. CUDA users get GPU automatically
  # through faster-whisper (CTranslate2) and don't need this.
  "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
ingest = [
  "yt-dlp>=2025.1",
]
relay = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
]
dev = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "PySide6>=6.7",
  "faster-whisper>=1.1.0",
  "yt-dlp>=2025.1",
  "psycopg[binary]>=3.1",
  "pytest>=8.2",
  "ruff>=0.6",
  "uvicorn>=0.30",
]

[project.scripts]
sound-vault = "sound_vault.app:main"
sound-vault-relay = "sound_vault.relay.server:main"
sound-vault-ingest = "sound_vault.ingest.cli:main"
sound-vault-agent = "sound_vault.agent.launchd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sound_vault"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
